Fixed spacing on desktop. Uses percentages and absolute pos.

--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
 
 div {
     text-align: center;
+    /*box-shadow: 1px 1px 1px #F00;*/
 }
 
 .rowOfLetters {
@@ -41,14 +42,22 @@ div {
 }
 
 #guesses {
-    font-size: 10em;
-    padding-top: 200px;
+    font-size: 9em;
+    position: absolute;
+    top: 20%;
+    left: 0;
+    right: 0;
 }
 
 #gameBoard {
     font-size: 8em;
     color: #f2b362;
     letter-spacing: 7px;
+    line-height: 1em;
+    position: absolute;
+    top: 35%;
+    left: 0;
+    right: 0;
 }
 
 #letterBoard {
